dropdown menu with all product category

--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -35,7 +35,12 @@
 
 <div class="container">
     <div class="well well-sm">
-        <strong th:text="${category.name}">Category Title</strong>
+        <select >
+            <option th:each="eachprod,iterStat : ${allProductCategory}">
+            <strong th:text="${eachprod.name}"></strong>
+            </option>
+        </select>
+
     </div>
 
     <div id="products" class="row list-group">
