--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -31,6 +31,12 @@
 
 <div class="jumbotron text-center">
     <h1>Codecool Shop</h1>
+    <div class="siteHeader_user">
+        <a href="#" class="btn btn-info btn-lg">
+            <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart
+        <span class="siteHeader_circleTag js-cartNum" th:text="${numberOfItems}">Num of Items</span>
+        </a>
+    </div>
 </div>
 
 <div class="container">
@@ -51,7 +57,7 @@
                             <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="#">Add to cart</a>
+                        <a class="btn btn-success" href="/?product=1" th:attr="href='/?product=' + ${prod.id}">Add to cart</a>
                         </div>
                     </div>
                 </div>
