--- a/src/main/webapp/templates/reviewCart.html
+++ b/src/main/webapp/templates/reviewCart.html
@@ -40,6 +40,7 @@
             <tr>
                 <th>Product</th>
                 <th>Quantity</th>
+                <th></th>
                 <th class="text-center">Price</th>
                 <th class="text-center">Total</th>
             </tr>
@@ -55,11 +56,22 @@
                         </div>
                     </td>
 
-                    <td class="col-sm-1 col-md-1" style="text-align: center">
-                        <input class="form-control" value="">
+                    <td class="col-sm-1 col-md-1" th:text="${prod.id}"><span>product quantity</span>
+
                     </td>
+
+                    <td>
+                        <button type="button" class="btn btn-default" aria-label="Left Align">
+                            <span class="glyphicon glyphicon-menu-up"></span>
+                        </button></br>
+
+                        <button type="button" class="btn btn-default" aria-label="Left Align">
+                            <span class="glyphicon glyphicon-menu-down"></span>
+                        </button>
+                    </td>
+
                     <td class="col-sm-1 col-md-1 text-center" th:text="${prod.defaultPrice}"><strong>$4.87</strong></td>
-                    <td class="col-sm-1 col-md-1 text-center"><strong>$14.61</strong></td>
+                    <td class="col-sm-1 col-md-1 text-center" th:text="${prod.defaultPrice}"><strong>$14.61</strong></td>
                     <td class="col-sm-1 col-md-1">
                         <form action="/reviewCart" method="get">
                             <input type="hidden" name="id" th:value="${prod.id}">
