--- a/src/main/webapp/templates/checkout.html
+++ b/src/main/webapp/templates/checkout.html
@@ -97,12 +97,11 @@
           <b th:text="${numberOfItems}">Num of Items</b>
         </span>
             </h4>
-            <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-            <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-            <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-            <p><a href="#">Product 4</a> <span class="price">$2</span></p>
+            <div th:text="${shoppingCart}">
+            <p><a th:text="${shoppingCart.name}" >Item name</a> <span class="price">$15</span></p>
             <hr>
             <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
+            </div>
         </div>
     </div>
 </div>
