--- a/src/main/webapp/templates/reviewCart.html
+++ b/src/main/webapp/templates/reviewCart.html
@@ -32,7 +32,9 @@
 <div class="jumbotron text-center">
     <h1>Review Shopping Cart</h1>
 </div>
-
+<div class="container">
+    <button onclick="location.href='http://www.example.com'"type="button" class="btn btn-outline-secondary">Homepage</button>
+</div>
 <div class="container">
     <div class="row">
         <table class="table table-hover">
