--- a/src/main/webapp/templates/reviewCart.html
+++ b/src/main/webapp/templates/reviewCart.html
@@ -33,8 +33,10 @@
     <h1>Review Shopping Cart</h1>
 </div>
 <div class="container">
-    <button onclick="location.href='http://www.example.com'"type="button" class="btn btn-outline-secondary">Homepage</button>
-</div>
+    <a href="/">
+        <button type="button" class="btn btn-outline-secondary">Homepage</button>
+    </a>
+</div></br>
 <div class="container">
     <div class="row">
         <table class="table table-hover">
@@ -58,7 +60,7 @@
                         </div>
                     </td>
 
-                    <td class="col-sm-1 col-md-1" th:text="${prod.id}"><span>product quantity</span>
+                    <td class="col-sm-1 col-md-1"><span>1</span>
 
                     </td>
 
@@ -72,8 +74,8 @@
                         </button>
                     </td>
 
-                    <td class="col-sm-1 col-md-1 text-center" th:text="${prod.defaultPrice}"><strong>$4.87</strong></td>
-                    <td class="col-sm-1 col-md-1 text-center" th:text="${prod.defaultPrice}"><strong>$14.61</strong></td>
+                    <td class="col-sm-1 col-md-1 text-center" th:text="${prod.defaultPrice + ' ' + prod.getDefaultCurrency()}"><strong>$4.87</strong></td>
+                    <td class="col-sm-1 col-md-1 text-center" th:text="${prod.defaultPrice + ' ' + prod.getDefaultCurrency()}"><strong>$14.61</strong></td>
                     <td class="col-sm-1 col-md-1">
                         <form action="/reviewCart" method="get">
                             <input type="hidden" name="id" th:value="${prod.id}">
@@ -88,15 +90,17 @@
             <tr>
                 <td><h3>Total</h3></td>
                 <td class="text-right">
-                    <h3><strong th:text="${total}">$31.53</strong></h3>
+                    <h3><strong th:text="${total}">$31.53</strong>USD</h3>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <button type="button" class="btn btn-success">
-                        <span class="glyphicon glyphicon-play"></span> Checkout
-                    </button>
+                    <a href="/checkout">
+                        <button type="button" class="btn btn-success">
+                            <span class="glyphicon glyphicon-play"></span> Checkout
+                        </button>
+                    </a>
                 </td>
             </tr>
 
