--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -67,7 +67,7 @@
                             <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                        <a class="btn btn-success" href="/?product=1" th:attr="href='/?product=' + ${prod.id}">Add to cart</a>
+                        <a class="btn btn-success" th:attr="href='/?product=' + ${prod.id}">Add to cart</a>
                         </div>
                     </div>
                 </div>
@@ -76,8 +76,6 @@
     </div>
 
 </div>
-
-
 
 </body>
 </html>
