modal pop up when wrong amount is given, not redirecting yet

--- a/src/main/webapp/templates/checkout.html
+++ b/src/main/webapp/templates/checkout.html
@@ -74,7 +74,7 @@
                 </p>
                 <hr>
             </div>
-            <p>Total <span th:text="${total} +' ' + currency" class="price"
+            <p>Total <span th:text="${total} +' ' + ${currency}" class="price"
                            style="color:black"><b>Total Prize of Items</b></span></p>
         </div>
     </div>
