--- a/src/main/webapp/templates/payment.html
+++ b/src/main/webapp/templates/payment.html
@@ -8,57 +8,56 @@
     <!-- Latest compiled and minified Jquery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"/>
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
+    <script src="static/javascript/productCategory.js" th:attr="src='/static/javascript/modal.js'" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/static/css/checkout.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/modal.css"/>
 </head>
 <body>
+<!-- Modal content -->
+<div id="myModal" class="modal-content">
+    <div class="modal-header">
+        <h2>The Payment Faild!!</h2>
+    </div>
+    <div class="modal-body">
+        <p>The amount is not enough, or wrong type.</p>
+        <p>Send the right amount.</p>
+    </div>
+</div>
 <div class="row">
     <div class="container">
-<form action="/payment">
-    <div class="col-25">
-        <h3>Payment</h3>
-        <tr>
-        <tr>
+        <form name="myForm" action="/payment">
+            <div class="col-25">
+                <h3>Payment</h3>
+                <label for="cname">Name on Card</label>
+                <input type="text" id="cname" name="cardname" placeholder="John More Doe">
+                <label for="cnum">Credit card number</label>
+                <input type="text" id="cnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+                <label for="cname">Amount</label>
+                <input type="text" th:field="*{amount}" id="amount" name="amount" required pattern="{1,100000}" placeholder="500 USD">
+                <label for="expmonth">Exp Month</label>
+                <input type="text" id="expmonth" name="expmonth" placeholder="September">
 
-
-        <label for="cname">Name on Card</label>
-        <input type="text" id="cname" name="cardname" placeholder="John More Doe">
-        <label for="ccnum">Credit card number</label>
-        <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
-        <label for="expmonth">Exp Month</label>
-        <input type="text" id="expmonth" name="expmonth" placeholder="September">
-
-        <div class="row">
-            <div class="col-50">
-                <label for="expyear">Exp Year</label>
-                <input type="text" id="expyear" name="expyear" placeholder="2018">
+                <div class="row">
+                    <div class="col-50">
+                        <label for="expyear">Exp Year</label>
+                        <input type="text" id="expyear" name="expyear" placeholder="2018">
+                    </div>
+                    <div class="col-50">
+                        <label for="cvv">CVV</label>
+                        <input type="text" id="cvv" name="cvv" placeholder="352">
+                    </div>
+                    <div class="col-50">
+                        <h3>Total </h3>
+                        <h4 id="total" th:attr="data-value=${total}" th:text="${total} +' ' +${currency}">Total </h4>
+                    </div>
+                    <div class="col-25">
+                        <input type="submit" id="success" value="Buy" class="btn"></div>
+                </div>
             </div>
-            <div class="col-50">
-                <label for="cvv">CVV</label>
-                <input type="text" id="cvv" name="cvv" placeholder="352">
-            </div>
-            <div class="col-50">
-                <h3>Total </h3>
-                <h4 th:text="${total} +' ' +${currency}">Total </h4>
-            </div>
-            <div class="col-25"><a href="/confirmation">
-                <input type="submit" value="Finish process" class="btn"></a></div>
-        </div>
+        </form>
     </div>
-</form>
 </div>
-</div>
+
 </body>
 </html>
