--- a/src/main/webapp/templates/payment.html
+++ b/src/main/webapp/templates/payment.html
@@ -26,7 +26,7 @@
 </div>
 <div class="row">
     <div class="container">
-        <form name="myForm" action="/payment">
+        <form name="myForm" action="/success">
             <div class="col-25">
                 <h3>Payment</h3>
                 <label for="cname">Name on Card</label>
@@ -51,8 +51,9 @@
                         <h3>Total </h3>
                         <h4 id="total" th:attr="data-value=${total}" th:text="${total} +' ' +${currency}">Total </h4>
                     </div>
-                    <div class="col-25">
-                        <input type="submit" id="success" value="Buy" class="btn"></div>
+                    <div class="col-25"><a href="/success"></a>
+                        <input type="submit" id="success" value="Buy" class="btn">
+                    </div>
                 </div>
             </div>
         </form>
