--- a/src/main/webapp/templates/paymentSuccess.html
+++ b/src/main/webapp/templates/paymentSuccess.html
@@ -1,16 +1,18 @@
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 <body>
 <div class="jumbotron text-xs-center">
-    <h1 class="display-3">Thank You!</h1>
-    <p class="lead"><strong>Your purchase was successful</strong> for further instructions on how to complete your account setup.</p>
+    <h1 class="display-3 text-center" th:text="${'Thank You, '+name+ '!'}">Thank You!</h1>
+    <p class="lead text-center"><strong>Your purchase was successful! </strong></p>
+    <p class="lead text-center" th:text="${'Total amount: '+ total + ' USD'}"><strong>You</strong></p>
     <hr>
-    <p>
+    <p class="text-center">
         Having trouble? <a href="">Contact us</a>
     </p>
-    <p class="lead">
+    <p class="lead text-center">
         <a class="btn btn-primary btn-sm" href="/" role="button">Continue to homepage</a>
     </p>
 </div>
