--- a/src/main/webapp/templates/payment.html
+++ b/src/main/webapp/templates/payment.html
@@ -31,6 +31,8 @@
                 <h3>Payment</h3>
                 <label for="cname">Name on Card</label>
                 <input type="text" id="cname" name="cardname" placeholder="John More Doe">
+                <label hidden for="email"><i class="fa fa-envelope"></i> Email</label>
+                <input hidden type="text" id="email" name="email" th:value="${email}">
                 <label for="cnum">Credit card number</label>
                 <input type="text" id="cnum" name="cardnumber" placeholder="1111-2222-3333-4444">
                 <label for="cname">Amount</label>
