--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css" />
 
     <script src="static/javascript/productCategory.js" th:attr="src='/static/javascript/productCategory.js'" type="text/javascript" defer></script>
+    <script src="static/javascript/login.js" th:attr="src='/static/javascript/login.js'" type="text/javascript" defer></script>
 
 </head>
 
@@ -45,7 +46,7 @@
 <div class="container">
 
     <div class="well well-sm">
-        <form name="form1 form-inline">
+        <form name="form1 form-inline" action="/" method="post">
             <select name="choseProduct" id="choseProduct">
                 <option value="" selected disabled><a href="/"></a>Choose here</option>
                 <option th:each="eachprod,iterStat : ${allProductCategory}" th:value="${eachprod.name}">
@@ -54,7 +55,7 @@
             </select>
             <ul class="list-inline pull-right">
                 <li><a href="/register" class="btn btn-info btn-sm">Register</a></li>
-                <li><a href="#" class="btn btn-info btn-sm">Log In</a></li>
+                <li><a href="#" id="login" class="btn btn-info btn-sm">Log In</a></li>
             </ul>
         </form>
 
