logged in user saved in session, logout implement

--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -61,3 +61,13 @@
 .login {
     display: none;
 }
+
+input {
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    padding: 4px;
+}
+
+.inline {
+    display: inline;
+}
