--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -46,16 +46,20 @@
 <div class="container">
 
     <div class="well well-sm">
-        <form name="form1 form-inline" action="/" method="post">
+        <form th:switch="${session.user}" name="form1 form-inline" action="/login" method="post">
             <select name="choseProduct" id="choseProduct">
                 <option value="" selected disabled><a href="/"></a>Choose here</option>
                 <option th:each="eachprod,iterStat : ${allProductCategory}" th:value="${eachprod.name}">
                     <strong th:text="${eachprod.name}"></strong>
                 </option>
             </select>
-            <ul class="list-inline pull-right">
+            <ul th:case="${null}" class="list-inline pull-right">
                 <li><a href="/register" class="btn btn-info btn-sm">Register</a></li>
                 <li><a href="#" id="login" class="btn btn-info btn-sm">Log In</a></li>
+            </ul>
+            <ul th:case="*" class="list-inline pull-right">
+                <li><p th:text="|Welcome, ${session.user.getName()}!|" class="inline"></p></li>
+                <li><a href="/logout" id="logout" class="btn btn-info btn-sm">Logout</a></li>
             </ul>
         </form>
 
