--- a/src/main/webapp/static/css/registration.css
+++ b/src/main/webapp/static/css/registration.css
@@ -34,7 +34,7 @@
     border-radius: 3px;
 }
 
-input[type=text], [type=password] {
+input {
     width: 100%;
     margin-bottom: 20px;
     padding: 12px;
