--- a/src/main/webapp/templates/checkout.html
+++ b/src/main/webapp/templates/checkout.html
@@ -21,9 +21,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
+
     <link rel="stylesheet" type="text/css" href="/static/css/checkout.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/navbar.css" />
+
+    <script src="static/javascript/login.js" th:attr="src='/static/javascript/login.js'" type="text/javascript" defer></script>
 </head>
 <body>
+
+<div th:replace="navbar.html :: copy"></div>
+
 <div class="row">
     <div class="col-75">
         <div class="container">
@@ -79,5 +86,9 @@
         </div>
     </div>
 </div>
+
+<div th:replace="footer.html :: copy"></div>
+
+
 </body>
 </html>
