--- a/src/main/webapp/templates/payment.html
+++ b/src/main/webapp/templates/payment.html
@@ -12,8 +12,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/static/css/checkout.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/modal.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/navbar.css" />
+
+    <script src="static/javascript/login.js" th:attr="src='/static/javascript/login.js'" type="text/javascript" defer></script>
+
 </head>
 <body>
+
+<div th:replace="navbar.html :: copy"></div>
+
 <!-- Modal content -->
 <div id="myModal" class="modal-content text-center">
     <div class="modal-header">
@@ -61,6 +68,8 @@
         </form>
     </div>
 </div>
+
+<div th:replace="footer.html :: copy"></div>
 
 </body>
 </html>
