--- a/src/main/webapp/templates/paymentSuccess.html
+++ b/src/main/webapp/templates/paymentSuccess.html
@@ -1,9 +1,17 @@
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <link rel="stylesheet" type="text/css" href="/static/css/navbar.css" />
+
+    <script src="static/javascript/login.js" th:attr="src='/static/javascript/login.js'" type="text/javascript" defer></script>
+</head>
 <body>
+
+<div th:replace="navbar.html :: copy"></div>
+
 <div class="jumbotron text-xs-center">
     <h1 class="display-3 text-center" th:text="${'Thank You, '+name+ '!'}">Thank You!</h1>
     <p class="lead text-center"><strong>Your purchase was successful! </strong></p>
@@ -16,6 +24,8 @@
         <a class="btn btn-primary btn-sm" href="/" role="button">Continue to homepage</a>
     </p>
 </div>
+
+<div th:replace="footer.html :: copy"></div>
 
 </body>
 </html>
