--- a/src/main/webapp/templates/checkout.html
+++ b/src/main/webapp/templates/checkout.html
@@ -67,14 +67,16 @@
           <b th:text="${numberOfItems}">Num of Items</b>
         </span>
             </h4>
-            <div th:each="prod : ${shoppingCartItems}">
-                <p><a th:text="${prod.name}">Item name</a> <span
-                        th:text="${prod.getDefaultPrice() + ' ' + prod.defaultCurrency}"
+            <div th:each="product : ${shoppingCartItems}" th:with="prod=${product.key}, count=${product.value}">
+                <p>
+                    <a th:text="${prod.name}">Item name</a>
+                    <span th:text="${'x' + count}"></span>
+                    <span th:text="${(prod.getDefaultPrice * count) + ' ' + prod.defaultCurrency}"
                         class="price">Default Price</span>
                 </p>
                 <hr>
             </div>
-            <p>Total <span th:text="${total} +' ' + ${currency}" class="price"
+            <p>Total <span th:text="|${total} ${currency}|" class="price"
                            style="color:black"><b>Total Prize of Items</b></span></p>
         </div>
     </div>
