--- a/src/main/webapp/static/css/checkout.css
+++ b/src/main/webapp/static/css/checkout.css
@@ -34,7 +34,7 @@
     border-radius: 3px;
 }
 
-input[type=text] {
+input.info {
     width: 100%;
     margin-bottom: 20px;
     padding: 12px;
@@ -53,7 +53,7 @@ label {
     font-size: 24px;
 }
 
-.btn {
+.payment {
     background-color: #4CAF50;
     color: white;
     padding: 12px;
