--- a/src/main/webapp/static/css/modal.css
+++ b/src/main/webapp/static/css/modal.css
@@ -1,5 +1,5 @@
 /* Modal Header */
-body {font-family: Arial, Helvetica, sans-serif;}
+div.body-class {font-family: Arial, Helvetica, sans-serif;}
 .modal-header {
     padding: 2px 16px;
     background-color: #B80303;
