--- a/src/main/webapp/templates/checkout.html
+++ b/src/main/webapp/templates/checkout.html
@@ -38,30 +38,41 @@
                 <div class="row">
                     <div class="col-50">
                         <h3>Billing Address</h3>
-                        <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-                        <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
-                        <label for="email"><i class="fa fa-envelope"></i> Email</label>
-                        <input type="text" id="email" name="email" placeholder="john@example.com">
+                        <div th:switch="${session.user}">
+                            <div th:case="null">
+                                <label for="fname"><i class="fa fa-user"></i>Name</label>
+                                <input class="info" type="text" id="fname" name="firstname" placeholder="John M. Doe" required>
+                                <label for="email"><i class="fa fa-envelope"></i> Email</label>
+                                <input class="info" type="email" id="email" name="email" placeholder="john@example.com" required>
+                            </div>
+                            <div th:case="*" >
+                                <label for="fname"><i class="fa fa-user"></i>Name</label>
+                                <input th:value="${session.user.getName()}" class="info" type="text" id="fname" name="firstname" placeholder="John M. Doe" required>
+                                <label for="email"><i class="fa fa-envelope"></i> Email</label>
+                                <input th:value="${session.user.getEmail()}" class="info" type="email" id="email" name="email">
+
+                            </div>
+                        </div>
                         <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
-                        <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
+                        <input class="info" type="text" id="adr" name="address" placeholder="542 W. 15th Street">
                         <label for="city"><i class="fa fa-institution"></i> City</label>
-                        <input type="text" id="city" name="city" placeholder="New York">
+                        <input class="info" type="text" id="city" name="city" placeholder="New York">
 
                         <div class="row">
                             <div class="col-50">
                                 <label for="state">State</label>
-                                <input type="text" id="state" name="state" placeholder="NY">
+                                <input class="info" type="text" id="state" name="state" placeholder="NY">
                             </div>
                             <div class="col-50">
                                 <label for="zip">Zip</label>
-                                <input type="text" id="zip" name="zip" placeholder="10001">
+                                <input class="info" type="text" id="zip" name="zip" placeholder="10001">
                             </div>
                         </div>
                     </div>
 
                 </div>
                 <a href="/payment">
-                    <input type="submit" value="Continue to payment" class="btn"></a>
+                    <input type="submit" value="Continue to payment" class="payment btn"></a>
             </form>
         </div>
     </div>
