fixed fontawsome pics

--- a/src/main/webapp/templates/checkout.html
+++ b/src/main/webapp/templates/checkout.html
@@ -5,6 +5,7 @@
     <meta name="author" content="Codecool"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Checkout</title>
+    
     <!-- Latest compiled and minified Jquery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
@@ -21,6 +22,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="/static/css/checkout.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/navbar.css" />
@@ -53,9 +56,9 @@
 
                             </div>
                         </div>
-                        <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
+                        <label for="adr"><i class="fas fa-address-card"></i> Address</label>
                         <input class="info" type="text" id="adr" name="address" placeholder="542 W. 15th Street">
-                        <label for="city"><i class="fa fa-institution"></i> City</label>
+                        <label for="city"><i class="fas fa-university"></i> City</label>
                         <input class="info" type="text" id="city" name="city" placeholder="New York">
 
                         <div class="row">
