--- a/src/main/webapp/templates/checkout.html
+++ b/src/main/webapp/templates/checkout.html
@@ -71,8 +71,7 @@
                     </div>
 
                 </div>
-                <a href="/payment">
-                    <input type="submit" value="Continue to payment" class="payment btn"></a>
+                    <input type="submit" value="Continue to payment" class="payment btn">
             </form>
         </div>
     </div>
