fixed fontawsome pics

--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -72,7 +72,7 @@
                             <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                        <a class="btn btn-success" th:attr="href='/?product=' + ${prod.id}">Add to cart</a>
+                        <a class="btn btn-primary btn" th:attr="href='/?product=' + ${prod.id}">Add to cart</a>
                         </div>
                     </div>
                 </div>
