--- a/src/main/webapp/static/css/checkout.css
+++ b/src/main/webapp/static/css/checkout.css
@@ -54,7 +54,7 @@ label {
 }
 
 .payment {
-    background-color: #4CAF50;
+    background-color: #23355b;
     color: white;
     padding: 12px;
     margin: 10px 0;
@@ -65,9 +65,7 @@ label {
     font-size: 17px;
 }
 
-.btn:hover {
-    background-color: #45a049;
-}
+
 
 span.price {
     float: right;
